--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "expo-linear-gradient": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "moment": "^2.29.1",
+    "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-calendars": "^1.1209.0",
+    "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "~1.13.0",
